# tramita

./: .env.model  .gitignore  README.md  browse.ipynb  duckdb_schema_preview.md  dumpcode.py  inspect_senado.py  parl.json  parlmandatos.json  plan.md  proc.json  procapens3.json  procsen.json  procsen2.json  procsenapens.json  procsendesapens.json  pyproject.toml  requirements.txt  silver_camara.ipynb  silver_camara_normalize.ipynb  silver_describe_db.ipynb  silver_senado.ipynb  silver_senado_normalize.ipynb  silver_workbench_camara.ipynb  silver_workbench_senado.ipynb  tardata.sh  test.ipynb  tipotram.json  tram.json  untardata.sh  urls
data/gold/: edges.parquet  nodes.csv  nodes.parquet
data/gold/accessory_data/: author_collab.graphml  author_cut_collab.graphml  collab_cut_edge_df.pkl  collab_cut_node_df.pkl  collab_edge_df.pkl  collab_node_df.pkl  historico_deputados_camara.pkl
dump/: orient.json  silver_models.py  silver_models.sql  tree
entrega_parcial/: camara.ipynb  fusao.ipynb  geracao_grafo.ipynb  leitura.ipynb  nodes.csv  senado.ipynb  senado.pkl
entrega_parcial/outputs/: camara_bipartite_edges.csv  camara_bipartite_nodes.csv  camara_tripartite_edges.csv  camara_tripartite_nodes.csv  edges.csv  edges_df.pkl  nodes.csv  nodes_df.pkl  orgaos_hotfix_2025-09-23.csv  senado_bipartite_edges.csv  senado_bipartite_nodes.csv
gold/: 01_reconstrucao_grafo.ipynb  02_analise_inicial.ipynb  02_extracao_eventos.ipynb  03_centralidade_comunidades.ipynb  03_extracao_eventos.ipynb  04_centralidade_comunidades.ipynb  04_fragmentacao.ipynb  04_outros_levantamentos.ipynb  04_por_casa_legislativa.ipynb  05_outros_levantamentos.ipynb  05_por_casa_legislativa.ipynb  author_collab.graphml  author_cut_collab.graphml  collab_cut_edge_df.pkl  collab_cut_node_df.pkl  collab_edge_df.pkl  collab_node_df.pkl  duckdb_markdown_export.py  duckdb_samples.md  duckdb_schemas.md  edges.csv  event.py  full_orgaos_camara_df.pkl  gold.ipynb  gold.md  gold.py  gold2.ipynb  gold2.py  gold3.ipynb  gold3.py  gold4.ipynb  gold4.py  gold5.ipynb  house_collab.graphml  nodes.csv  senate_collab.graphml  utils.py
gold/accessory_data/: author_collab.graphml  author_cut_collab.graphml  collab_cut_edge_df.pkl  collab_cut_node_df.pkl  collab_edge_df.pkl  collab_node_df.pkl  edge_consolidated_df.pkl  gini_morethan10_df.xlsx  house_collab.graphml  main_g_betwn_unwtd.json  main_g_btwn.json  main_g_btwn_frac.json  node_consolidated_df.pkl  partidos_membros_camara.pkl  senate_collab.graphml  senate_ids_and_parties_df.pkl
gold/outputs/: edges.csv  nodes.csv
misc_utils/: bronze_schema_diagram.py
notebooks/: silver_workbench_senado.ipynb
src/tramita/: __init__.py  cli.py  config.py  log.py  ui.py
src/tramita/gold/: __init__.py  utils.py
src/tramita/http/: __init__.py  client.py  (+2 more)
tests/: test_http_client.py  test_parquet.py
utils/: extract_ipynbs.ipynb  generate_db_docs.py  parse_manifest.ipynb
(+497 files in other folders)
