[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tramita"
version = "0.1.0"
description = "Projeto de análises de tramitações no Congresso Nacional do Brasil"
authors = [
    {name = "Guilherme Gama", email = "guilhermegama@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

# ✅ runtime dependencies
dependencies = [
    "duckdb>=1.4.0",
    "typer>=0.12.0",
    "httpx[http2]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.2.1",
    "pyarrow>=15.0.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.7",
    "jupysql>=0.11.1",
]

[project.optional-dependencies]
# optional zstandard support for the packing script
zstd = ["zstandard>=0.22"]

[project.scripts]
tramita = "tramita.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "venv",
    ".venv",
]

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["tramita"]
